# serializer version: 1
# name: TestArchive.test_ok[resp]
  dict({
    'archived': True,
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': 'approximately_now_isoformat',
    'data_type': 'genome',
    'description': '',
    'groups': list([
    ]),
    'id': 1,
    'imported_from': None,
    'latest_build': None,
    'name': 'Test Reference',
    'organism': '',
    'otu_count': 0,
    'restrict_source_types': False,
    'source_types': list([
      'isolate',
      'strain',
    ]),
    'task': None,
    'unbuilt_change_count': 0,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': 'approximately_now_isoformat',
        'handle': 'leeashley',
        'id': 1,
        'modify': True,
        'modify_otu': True,
      }),
    ]),
  })
# ---
# name: TestCreate.test_clone[location]
  '/references/v1/2'
# ---
# name: TestCreate.test_clone[resp]
  dict({
    'archived': False,
    'cloned_from': dict({
      'id': 1,
      'name': 'Foo',
    }),
    'contributors': list([
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'data_type': 'genome',
    'description': '',
    'groups': list([
    ]),
    'id': 2,
    'imported_from': None,
    'latest_build': None,
    'name': 'Test 1',
    'organism': 'virus',
    'otu_count': 0,
    'restrict_source_types': False,
    'source_types': list([
      'isolate',
      'strain',
    ]),
    'task': dict({
      'complete': False,
      'created_at': '2015-10-06T20:00:00Z',
      'error': None,
      'id': 1,
      'progress': 0,
      'step': 'clone_reference',
      'type': 'clone_reference',
    }),
    'unbuilt_change_count': 0,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': '2015-10-06T20:00:00Z',
        'handle': 'leeashley',
        'id': 1,
        'modify': True,
        'modify_otu': True,
      }),
    ]),
  })
# ---
# name: TestCreate.test_import
  dict({
    'archived': False,
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'data_type': 'genome',
    'description': '',
    'groups': list([
    ]),
    'id': int,
    'imported_from': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 1,
      'name': 'reference.json.gz',
      'ready': True,
      'removed': False,
      'removed_at': None,
      'reserved': False,
      'size': 102286,
      'type': 'reference',
      'uploaded_at': '2015-10-06T20:00:00Z',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'latest_build': None,
    'name': 'Test Viruses',
    'organism': '',
    'otu_count': 0,
    'restrict_source_types': False,
    'source_types': list([
      'isolate',
      'strain',
    ]),
    'task': dict({
      'complete': False,
      'created_at': '2015-10-06T20:00:00Z',
      'error': None,
      'id': 1,
      'progress': 0,
      'step': 'import_reference',
      'type': 'import_reference',
    }),
    'unbuilt_change_count': 0,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': '2015-10-06T20:00:00Z',
        'handle': 'leeashley',
        'id': 1,
        'modify': True,
        'modify_otu': True,
      }),
    ]),
  })
# ---
# name: TestCreate.test_ok[location]
  'https://virtool.example.com/references/v1/1'
# ---
# name: TestCreate.test_ok[resp]
  dict({
    'archived': False,
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': 'approximately_now_isoformat',
    'data_type': 'genome',
    'description': 'A bunch of viruses used for testing',
    'groups': list([
    ]),
    'id': 1,
    'imported_from': None,
    'latest_build': None,
    'name': 'Test Viruses',
    'organism': 'virus',
    'otu_count': 0,
    'restrict_source_types': False,
    'source_types': list([
      'strain',
      'isolate',
    ]),
    'task': None,
    'unbuilt_change_count': 0,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': 'approximately_now_isoformat',
        'handle': 'leeashley',
        'id': 1,
        'modify': True,
        'modify_otu': True,
      }),
    ]),
  })
# ---
# name: TestCreateIndex.test_ok
  dict({
    'change_count': 1,
    'contributors': list([
      dict({
        'count': 1,
        'handle': 'leeashley',
        'id': 1,
      }),
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'id': 'bf1b993c',
    'job': None,
    'manifest': dict({
      'bar': 5,
      'foo': 2,
    }),
    'modified_otu_count': 1,
    'otus': list([
      dict({
        'change_count': 1,
        'id': 'otu_1',
        'name': 'Tobacco mosaic virus',
      }),
    ]),
    'ready': False,
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Foo',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'version': 0,
  })
# ---
# name: TestCreateIndex.test_ok.1
  dict({
    '_id': 'bf1b993c',
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'job': None,
    'manifest': dict({
      'bar': 5,
      'foo': 2,
    }),
    'ready': False,
    'reference': dict({
      'id': 1,
    }),
    'task': dict({
      'id': 1,
    }),
    'user': dict({
      'id': 1,
    }),
    'version': 0,
  })
# ---
# name: TestCreateOTU.test[None-None][history]
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created Tobacco mosaic virus',
    'diff': dict({
      '_id': 'bf1b993c',
      'abbreviation': '',
      'isolates': list([
      ]),
      'last_indexed_version': None,
      'lower_name': 'tobacco mosaic virus',
      'name': 'Tobacco mosaic virus',
      'reference': dict({
        'id': 1,
      }),
      'schema': list([
      ]),
      'verified': False,
      'version': 0,
    }),
    'id': 'bf1b993c.0',
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': <HistoryMethod.create: 'create'>,
    'otu': dict({
      'id': 'bf1b993c',
      'name': 'Tobacco mosaic virus',
      'version': 0,
    }),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Foo',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: TestCreateOTU.test[None-None][otu]
  dict({
    'abbreviation': '',
    'id': 'bf1b993c',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Tobacco mosaic virus',
      'id': 'bf1b993c.0',
      'method_name': <HistoryMethod.create: 'create'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'name': 'Tobacco mosaic virus',
    'otu_schema': list([
    ]),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Foo',
    }),
    'remote': None,
    'verified': False,
    'version': 0,
  })
# ---
# name: TestCreateOTU.test[None-None][resp]
  dict({
    'abbreviation': '',
    'id': 'bf1b993c',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Created Tobacco mosaic virus',
      'id': 'bf1b993c.0',
      'method_name': 'create',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'name': 'Tobacco mosaic virus',
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Foo',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 0,
  })
# ---
# name: TestCreateOTU.test[None-TMV][history]
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created Tobacco mosaic virus (TMV)',
    'diff': dict({
      '_id': 'bf1b993c',
      'abbreviation': 'TMV',
      'isolates': list([
      ]),
      'last_indexed_version': None,
      'lower_name': 'tobacco mosaic virus',
      'name': 'Tobacco mosaic virus',
      'reference': dict({
        'id': 1,
      }),
      'schema': list([
      ]),
      'verified': False,
      'version': 0,
    }),
    'id': 'bf1b993c.0',
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': <HistoryMethod.create: 'create'>,
    'otu': dict({
      'id': 'bf1b993c',
      'name': 'Tobacco mosaic virus',
      'version': 0,
    }),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Foo',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: TestCreateOTU.test[None-TMV][otu]
  dict({
    'abbreviation': 'TMV',
    'id': 'bf1b993c',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Tobacco mosaic virus (TMV)',
      'id': 'bf1b993c.0',
      'method_name': <HistoryMethod.create: 'create'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'name': 'Tobacco mosaic virus',
    'otu_schema': list([
    ]),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Foo',
    }),
    'remote': None,
    'verified': False,
    'version': 0,
  })
# ---
# name: TestCreateOTU.test[None-TMV][resp]
  dict({
    'abbreviation': 'TMV',
    'id': 'bf1b993c',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Created Tobacco mosaic virus (TMV)',
      'id': 'bf1b993c.0',
      'method_name': 'create',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'name': 'Tobacco mosaic virus',
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Foo',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 0,
  })
# ---
# name: TestCreateOTU.test[None-][history]
  dict({
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'description': 'Created Tobacco mosaic virus',
    'diff': dict({
      '_id': 'bf1b993c',
      'abbreviation': '',
      'isolates': list([
      ]),
      'last_indexed_version': None,
      'lower_name': 'tobacco mosaic virus',
      'name': 'Tobacco mosaic virus',
      'reference': dict({
        'id': 1,
      }),
      'schema': list([
      ]),
      'verified': False,
      'version': 0,
    }),
    'id': 'bf1b993c.0',
    'index': dict({
      'id': 'unbuilt',
      'version': 'unbuilt',
    }),
    'method_name': <HistoryMethod.create: 'create'>,
    'otu': dict({
      'id': 'bf1b993c',
      'name': 'Tobacco mosaic virus',
      'version': 0,
    }),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Foo',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: TestCreateOTU.test[None-][otu]
  dict({
    'abbreviation': '',
    'id': 'bf1b993c',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Tobacco mosaic virus',
      'id': 'bf1b993c.0',
      'method_name': <HistoryMethod.create: 'create'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'name': 'Tobacco mosaic virus',
    'otu_schema': list([
    ]),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Foo',
    }),
    'remote': None,
    'verified': False,
    'version': 0,
  })
# ---
# name: TestCreateOTU.test[None-][resp]
  dict({
    'abbreviation': '',
    'id': 'bf1b993c',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'description': 'Created Tobacco mosaic virus',
      'id': 'bf1b993c.0',
      'method_name': 'create',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'name': 'Tobacco mosaic virus',
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Foo',
    }),
    'remote': None,
    'schema': list([
    ]),
    'verified': False,
    'version': 0,
  })
# ---
# name: TestEdit.test_ok[resp]
  dict({
    'archived': False,
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'data_type': 'genome',
    'description': 'This is a test reference.',
    'groups': list([
    ]),
    'id': 1,
    'imported_from': None,
    'latest_build': None,
    'name': 'Bar',
    'organism': 'virus',
    'otu_count': 0,
    'restrict_source_types': False,
    'source_types': list([
      'isolate',
      'strain',
    ]),
    'task': None,
    'unbuilt_change_count': 0,
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': '2015-10-06T20:00:00Z',
        'handle': 'modonnell',
        'id': 3,
        'modify': True,
        'modify_otu': True,
      }),
      dict({
        'build': True,
        'created_at': '2015-10-06T20:00:00Z',
        'handle': 'garciaregina',
        'id': 4,
        'modify': True,
        'modify_otu': True,
      }),
    ]),
  })
# ---
# name: TestFindHistory.test_ok
  dict({
    'documents': list([
      dict({
        'created_at': 'approximately_now_isoformat',
        'description': 'Created new sequence NC_001367 in Isolate strain_1',
        'id': 'bf1b993c.2',
        'index': dict({
          'id': 'unbuilt',
          'version': 'unbuilt',
        }),
        'method_name': 'create_sequence',
        'otu': dict({
          'id': 'bf1b993c',
          'name': 'Tobacco mosaic virus',
          'version': 2,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Test Reference',
        }),
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
      dict({
        'created_at': 'approximately_now_isoformat',
        'description': 'Added Isolate strain_1 as default',
        'id': 'bf1b993c.1',
        'index': dict({
          'id': 'unbuilt',
          'version': 'unbuilt',
        }),
        'method_name': 'add_isolate',
        'otu': dict({
          'id': 'bf1b993c',
          'name': 'Tobacco mosaic virus',
          'version': 1,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Test Reference',
        }),
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
      dict({
        'created_at': 'approximately_now_isoformat',
        'description': 'Created Cucumber mosaic virus',
        'id': '7cf872dc.0',
        'index': dict({
          'id': 'unbuilt',
          'version': 'unbuilt',
        }),
        'method_name': 'create',
        'otu': dict({
          'id': '7cf872dc',
          'name': 'Cucumber mosaic virus',
          'version': 0,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Test Reference',
        }),
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
      dict({
        'created_at': 'approximately_now_isoformat',
        'description': 'Created Potato virus X (PVX)',
        'id': 'fb085f7f.0',
        'index': dict({
          'id': 'unbuilt',
          'version': 'unbuilt',
        }),
        'method_name': 'create',
        'otu': dict({
          'id': 'fb085f7f',
          'name': 'Potato virus X',
          'version': 0,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Test Reference',
        }),
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
      dict({
        'created_at': 'approximately_now_isoformat',
        'description': 'Created Tobacco mosaic virus (TMV)',
        'id': 'bf1b993c.0',
        'index': dict({
          'id': 'unbuilt',
          'version': 'unbuilt',
        }),
        'method_name': 'create',
        'otu': dict({
          'id': 'bf1b993c',
          'name': 'Tobacco mosaic virus',
          'version': 0,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Test Reference',
        }),
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
    ]),
    'found_count': 5,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 5,
  })
# ---
# name: TestGet.test_ok
  dict({
    'archived': False,
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'data_type': 'genome',
    'description': '',
    'groups': list([
    ]),
    'id': 1,
    'imported_from': None,
    'latest_build': None,
    'name': 'Bar',
    'organism': 'virus',
    'otu_count': 0,
    'restrict_source_types': False,
    'source_types': list([
      'isolate',
      'strain',
    ]),
    'task': None,
    'unbuilt_change_count': 0,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': '2015-10-06T20:00:00Z',
        'handle': 'leeashley',
        'id': 1,
        'modify': True,
        'modify_otu': True,
      }),
      dict({
        'build': False,
        'created_at': '2015-10-06T20:00:00Z',
        'handle': 'myersmitchell',
        'id': 2,
        'modify': False,
        'modify_otu': False,
      }),
    ]),
  })
# ---
# name: TestUnarchive.test_ok[resp]
  dict({
    'archived': False,
    'cloned_from': None,
    'contributors': list([
    ]),
    'created_at': 'approximately_now_isoformat',
    'data_type': 'genome',
    'description': '',
    'groups': list([
    ]),
    'id': 1,
    'imported_from': None,
    'latest_build': None,
    'name': 'Test Reference',
    'organism': '',
    'otu_count': 0,
    'restrict_source_types': False,
    'source_types': list([
      'isolate',
      'strain',
    ]),
    'task': None,
    'unbuilt_change_count': 0,
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'users': list([
      dict({
        'build': True,
        'created_at': 'approximately_now_isoformat',
        'handle': 'leeashley',
        'id': 1,
        'modify': True,
        'modify_otu': True,
      }),
    ]),
  })
# ---
# name: TestUpdateUser.test_ok
  dict({
    'build': False,
    'created_at': '2015-10-06T20:00:00Z',
    'handle': 'myersmitchell',
    'id': 2,
    'modify': True,
    'modify_otu': True,
  })
# ---
# name: test_create_group[None]
  dict({
    'build': False,
    'created_at': '2015-10-06T20:00:00Z',
    'id': 2,
    'legacy_id': None,
    'modify': True,
    'modify_otu': False,
    'name': 'gaffers',
  })
# ---
# name: test_create_user[None][resp]
  dict({
    'build': False,
    'created_at': '2015-10-06T20:00:00Z',
    'handle': 'myersmitchell',
    'id': 2,
    'modify': True,
    'modify_otu': False,
  })
# ---
# name: test_find[active]
  dict({
    'documents': list([
      dict({
        'archived': False,
        'cloned_from': None,
        'created_at': '2015-10-06T20:00:00Z',
        'data_type': 'genome',
        'id': 4,
        'imported_from': None,
        'latest_build': None,
        'name': 'Group Member Active',
        'organism': 'virus',
        'otu_count': 0,
        'task': dict({
          'complete': False,
          'created_at': '2015-10-06T20:00:00Z',
          'error': None,
          'id': 2,
          'progress': 80,
          'step': 'download',
          'type': 'import_reference',
        }),
        'unbuilt_change_count': 0,
        'user': dict({
          'handle': 'brandonberry',
          'id': 2,
        }),
      }),
      dict({
        'archived': False,
        'cloned_from': None,
        'created_at': '2015-10-06T20:00:00Z',
        'data_type': 'genome',
        'id': 1,
        'imported_from': None,
        'latest_build': None,
        'name': 'Owned Active',
        'organism': 'virus',
        'otu_count': 0,
        'task': dict({
          'complete': True,
          'created_at': '2015-10-06T20:00:00Z',
          'error': None,
          'id': 1,
          'progress': 100,
          'step': 'download',
          'type': 'clone_reference',
        }),
        'unbuilt_change_count': 0,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
      dict({
        'archived': False,
        'cloned_from': None,
        'created_at': '2015-10-06T20:00:00Z',
        'data_type': 'genome',
        'id': 3,
        'imported_from': None,
        'latest_build': None,
        'name': 'User Member Active',
        'organism': 'virus',
        'otu_count': 0,
        'task': dict({
          'complete': False,
          'created_at': '2015-10-06T20:00:00Z',
          'error': None,
          'id': 2,
          'progress': 80,
          'step': 'download',
          'type': 'import_reference',
        }),
        'unbuilt_change_count': 0,
        'user': dict({
          'handle': 'brandonberry',
          'id': 2,
        }),
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 4,
  })
# ---
# name: test_find[archived]
  dict({
    'documents': list([
      dict({
        'archived': True,
        'cloned_from': None,
        'created_at': '2015-10-06T20:00:00Z',
        'data_type': 'genome',
        'id': 5,
        'imported_from': None,
        'latest_build': None,
        'name': 'Owned Archived',
        'organism': 'virus',
        'otu_count': 0,
        'task': dict({
          'complete': True,
          'created_at': '2015-10-06T20:00:00Z',
          'error': None,
          'id': 1,
          'progress': 100,
          'step': 'download',
          'type': 'clone_reference',
        }),
        'unbuilt_change_count': 0,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
    ]),
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 4,
  })
# ---
# name: test_find[default]
  dict({
    'documents': list([
      dict({
        'archived': False,
        'cloned_from': None,
        'created_at': '2015-10-06T20:00:00Z',
        'data_type': 'genome',
        'id': 4,
        'imported_from': None,
        'latest_build': None,
        'name': 'Group Member Active',
        'organism': 'virus',
        'otu_count': 0,
        'task': dict({
          'complete': False,
          'created_at': '2015-10-06T20:00:00Z',
          'error': None,
          'id': 2,
          'progress': 80,
          'step': 'download',
          'type': 'import_reference',
        }),
        'unbuilt_change_count': 0,
        'user': dict({
          'handle': 'brandonberry',
          'id': 2,
        }),
      }),
      dict({
        'archived': False,
        'cloned_from': None,
        'created_at': '2015-10-06T20:00:00Z',
        'data_type': 'genome',
        'id': 1,
        'imported_from': None,
        'latest_build': None,
        'name': 'Owned Active',
        'organism': 'virus',
        'otu_count': 0,
        'task': dict({
          'complete': True,
          'created_at': '2015-10-06T20:00:00Z',
          'error': None,
          'id': 1,
          'progress': 100,
          'step': 'download',
          'type': 'clone_reference',
        }),
        'unbuilt_change_count': 0,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
      dict({
        'archived': True,
        'cloned_from': None,
        'created_at': '2015-10-06T20:00:00Z',
        'data_type': 'genome',
        'id': 5,
        'imported_from': None,
        'latest_build': None,
        'name': 'Owned Archived',
        'organism': 'virus',
        'otu_count': 0,
        'task': dict({
          'complete': True,
          'created_at': '2015-10-06T20:00:00Z',
          'error': None,
          'id': 1,
          'progress': 100,
          'step': 'download',
          'type': 'clone_reference',
        }),
        'unbuilt_change_count': 0,
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
      dict({
        'archived': False,
        'cloned_from': None,
        'created_at': '2015-10-06T20:00:00Z',
        'data_type': 'genome',
        'id': 3,
        'imported_from': None,
        'latest_build': None,
        'name': 'User Member Active',
        'organism': 'virus',
        'otu_count': 0,
        'task': dict({
          'complete': False,
          'created_at': '2015-10-06T20:00:00Z',
          'error': None,
          'id': 2,
          'progress': 80,
          'step': 'download',
          'type': 'import_reference',
        }),
        'unbuilt_change_count': 0,
        'user': dict({
          'handle': 'brandonberry',
          'id': 2,
        }),
      }),
    ]),
    'found_count': 4,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 4,
  })
# ---
# name: test_find_otus[False-None]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'P',
        'id': '5316cbz2',
        'name': 'Papaya virus q',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': False,
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[False-PVF]
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'modified_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[False-Prunus]
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'modified_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[False-VF]
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'modified_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[False-virus]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'P',
        'id': '5316cbz2',
        'name': 'Papaya virus q',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': False,
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[None-None]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'P',
        'id': '5316cbz2',
        'name': 'Papaya virus q',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': False,
        'version': 0,
      }),
      dict({
        'abbreviation': 'PVF',
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': True,
        'version': 0,
      }),
    ]),
    'found_count': 2,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[None-PVF]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'PVF',
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': True,
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[None-Prunus]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'PVF',
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': True,
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[None-VF]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'PVF',
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': True,
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[None-virus]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'P',
        'id': '5316cbz2',
        'name': 'Papaya virus q',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': False,
        'version': 0,
      }),
      dict({
        'abbreviation': 'PVF',
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': True,
        'version': 0,
      }),
    ]),
    'found_count': 2,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[True-None]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'PVF',
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': True,
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[True-PVF]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'PVF',
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': True,
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[True-Prunus]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'PVF',
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': True,
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[True-VF]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'PVF',
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': True,
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_find_otus[True-virus]
  dict({
    'documents': list([
      dict({
        'abbreviation': 'PVF',
        'id': '6116cba1',
        'name': 'Prunus virus F',
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Foo',
        }),
        'verified': True,
        'version': 0,
      }),
    ]),
    'found_count': 1,
    'modified_count': 0,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_update_group[None][resp]
  dict({
    'build': False,
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'legacy_id': None,
    'modify': False,
    'modify_otu': True,
    'name': 'musicians',
  })
# ---
